todo application created

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular6TodoApplicationWithMaterialTheme</title>
+  <title>Todo Application with Angular 6 Material Theme || Rohit Azad UI Developer || ram9953878727@gmail.com</title>
   <base href="/">
 
+  <meta name="description" content="Todo Application || Angular 6 Todo Application || Angular Material Theme Todo Application ">
+  <meta name="keywords" content="Angular, angular6, material theme, todo, angular-cli, todo-app">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
